# MovieRatingAI

./: .gitignore  README.md  main.py  plot.py  predict.py  pyproject.toml  setup.py  train.py
train_data/: test.csv  train.csv  valid.csv
